--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Prashant Pujari"
 description              : &description "personal description"
 url                      : https://prashant-pujari.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "prashant-pujari/prashant-pujari.github.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://https://scholar.google.com/citations?user=a3jav-QAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=a3jav-QAAAAJ&hl=en"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0001-5632-5865"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
