--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Prashant Pujari"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
-  location         : "Berkeley"
+  location         : "California, USA"
   employer         : "University of California, Berkeley"
   uri              : # URL
-  email            : # "none@example.org" 
+  email            : "prashantpujari05@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
