--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,14 +5,11 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "About"
+  #   url: /about/
 
   - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+    url: /talks/  
     
   - title: "Portfolio"
     url: /portfolio/
@@ -20,8 +17,18 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
-    
   - title: "Guide"
     url: /markdown/
+
+  # - title: "Research"
+  #   url: /research/    
+
+  # - title: "Teaching"
+  #   url: /teaching/    
+    
+  - title: "Publication"
+    url: /publication/        
+    
+  - title: "CV"
+    url: /files/CV.pdf
+    
