--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/prashant-chandra-pujari/"
+  linkedin         : "prashant-chandra-pujari"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
