--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,11 +23,11 @@ main:
   # - title: "Research"
   #   url: /research/    
 
-  # - title: "Teaching"
-  #   url: /teaching/    
+  - title: "Teaching"
+    url: /teaching/    
     
   - title: "Publication"
-    url: /publication/        
+    url: /publications/        
     
   - title: "CV"
     url: /files/CV.pdf
