--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,6 +29,6 @@ main:
   - title: "Publication"
     url: /publications/        
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
