--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Prashant Pujari"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Research Assistant at Theoretical & Applied Fluid Dynamics Laboratory"
   location         : "California, USA"
   employer         : "University of California, Berkeley"
   uri              : # URL
